# pulumi_mo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  REUSE.toml  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docker/demo/: Pulumi.yaml  __main__.py
pulumi_mo/: base.py  clazz.py  itsystem.py  ituser.py  person.py  rolebinding.py
pulumi_mo/autogenerated_graphql_client/: __init__.py  _testing_facet_read.py  class_delete.py  class_read.py  client.py  input_types.py  itsystem_delete.py  itsystem_read.py  ituser_delete.py  ituser_read.py  person_delete.py  person_read.py  rolebinding_create.py  rolebinding_delete.py  rolebinding_read.py  rolebinding_update.py
queries/: class.graphql  itsystem.graphql  ituser.graphql  person.graphql  queries.graphql  rolebinding.graphql  testing.graphql
tests/: conftest.py  test_class.py  test_client.py  test_dummy.py  test_itsystem.py  test_ituser.py  test_pulumi_lookup.py  test_rolebinding.py  test_stack.py
tools/: regen_client.sh
