# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "pulumi_mo"
version = "0.0.0"  # versioning handled by conventional commits
description = "Dynamic Pulumi provider for OS2mo"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/pulumi_mo"
keywords = ["os2mo"]
packages = [ { include = "pulumi_mo" } ]
include = ["pulumi_mo/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "^3"

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-asyncio = "^0.24"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3"
ruff = "^0.9"
deptry = "^0.23"
mypy = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"

]
ignore = [
  # Allow lines longer than 90 characters if ruff-format decides so
  "E501"
]

[tool.ruff.lint.isort]
force-single-line = true
